--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="/src/style.css" />
+  
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
   <body>
     <div id="app">
-      <h1>Bootcamp JS - JavaScript SandBox</h1>
-    </div>
+      <h1>Las 7 y media</h1>
+      <div type="number" id="puntuacion">puntuacion</div>
+      <img id="imagenCarta" src="https://raw.githubusercontent.com/Lemoncode/fotos-ejemplos/main/cartas/back.jpg" alt="Carta">
+      <div type="" id="mensaje">Estado de partida</div>
+      <button id="botonDarCarta">Dame carta</button>
+      <button id="botonPlantarse">Plantarse</button>
+      <button id="botonReinicio">Reiniciar</button>
+    
+     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
